--- a/wsgi/openshift/core/static/sass/_map-container.sass
+++ b/wsgi/openshift/core/static/sass/_map-container.sass
@@ -1,17 +1,11 @@
-$blue-top: #73c5ef
-$blue-bottom: #1a82f7
 $map-height:500px
 
 .map-container
   height: $map-height
-  background-color: $blue-top
-  background: -webkit-linear-gradient(top, $blue-top, $blue-bottom)
-  background: -moz-linear-gradient(top, $blue-top, $blue-bottom)
-  background: -o-linear-gradient(top, $blue-top, $blue-bottom)
-  background: -ms-linear-gradient(top, $blue-top, $blue-bottom)
-  box-shadow: 0px 0px 20px #888
+  background-color: #73c5ef
+  background: -  #34DDDD
   color: white
-  text-shadow: 1px 1px 9px rgba(0, 0, 0, 0.8), 0 0 30px rgba(0, 0, 0, 0.075)
+  text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.8), 0 0 0px rgba(0, 0, 0, 0.075)
 
   .map-positioner
     position: relative
@@ -34,8 +28,8 @@ $map-height:500px
 
   .btn-practice
     position: absolute
-    bottom: 10px
-    right: 10px
+    bottom: 20px
+    right: -10px
     z-index: 6
 
   .map-label
