--- a/wsgi/openshift/core/static/sass/_practice.sass
+++ b/wsgi/openshift/core/static/sass/_practice.sass
@@ -11,8 +11,7 @@
       float: left
       margin-right: 20px
 
-.map-container
-  .progress
-    margin-bottom: 0
-    height: 10px
-    margin-top: -15px
+.quesions-progress
+  border-radius: 0
+  height: 10px
+  margin-bottom: 15px
