--- a/wsgi/openshift/core/static/sass/_responsive.sass
+++ b/wsgi/openshift/core/static/sass/_responsive.sass
@@ -51,6 +51,20 @@
   .map-container
     #map-holder
       width: 100%
+  .practice 
+    .btn-large
+      padding: 2px 10px
+      font-size: 11.9px
+      -webkit-border-radius: 3px
+      -moz-border-radius: 3px
+      border-radius: 3px
+      [class^="icon-"], [class*=" icon-"]
+        margin-top: 0
+    h2 .label
+      font-size: 11.844px
+      line-height: 14px
+  #footer
+    font-size: 0.7em
     
 @media (min-width: 767px)
   $huge-radius: 9px
