--- a/wsgi/openshift/templates/home/home.html
+++ b/wsgi/openshift/templates/home/home.html
@@ -45,7 +45,7 @@
     ================================================== -->
 
 
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-inverse">
         <div class="container">
 
     <!-- .navbar-toggle is used as the toggle for collapsed navbar content -->
@@ -56,7 +56,7 @@
     </button>
 
       <a class="navbar-brand" href="#">Slepé Mapy</a>
-      <div class="nav-collapse collapse navbar-responsive-collapse">
+      <div class="collapse navbar-collapse navbar-responsive-collapse">
         <ul class="nav navbar-nav  pull-left">
                 <li ng-class="getActiveClass('/view/world/')">
                   <a href="#/view/world/">Mapa světa</a>
@@ -67,8 +67,8 @@
                 <li class="dropdown" ng-show="user.username == ''">
                   <a id="drop1" href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">Přihlásit se <b class="caret"></b></a>
                   <ul class="dropdown-menu login" role="menu" aria-labelledby="drop1">
-                    <li><a class="btn btn-danger btn-large" href="/login/google/"><i class="social-google"></i> přes Google</a></li>
-                    <li><a class="btn btn-primary btn-large" href="/login/facebook/"><i class="social-facebook"></i> přes Facebook</a></li>
+                    <li><a class="btn btn-danger btn-lg" href="/login/google/"><i class="social-google"></i> přes Google</a></li>
+                    <li><a class="btn btn-primary btn-lg" href="/login/facebook/"><i class="social-facebook"></i> přes Facebook</a></li>
                   </ul>
                 </li>
                 <li class="dropdown" ng-show="user.username != ''">
