welcome page loading speed up

--- a/wsgi/openshift/templates/home/home.html
+++ b/wsgi/openshift/templates/home/home.html
@@ -100,7 +100,9 @@
     ================================================== -->
     <!--<a href="feedbackyform.html" id="fdbk_tab" class="fdbk_tab_left ">FEEDBACK</a>-->
     <img class="version" src="static/img/beta.png" alt="Beta verze"/>
-    <div data-ng-view id="ng-view" ng-animate="{enter: 'view-enter'}" ng-class="vip() && 'vip'"></div>
+    <div data-ng-view id="ng-view" ng-animate="{enter: 'view-enter'}" ng-class="vip() && 'vip'">
+        {% include "home/welcome_page.html" %}
+    </div>
   </div>
 
     <div id="footer">
