--- a/wsgi/openshift/core/static/sass/_global.sass
+++ b/wsgi/openshift/core/static/sass/_global.sass
@@ -148,8 +148,10 @@ html, body
     line-height: 150%
   [class*="col-"]
     float: none
-  .main-paragraph
+  .block-welcome_page
     font-size: 1.25em
+    padding: 30px
+    line-height: 150%
     
 @media (min-width: 767px)
   $huge-radius: 9px
