--- a/wsgi/openshift/core/static/sass/_global.sass
+++ b/wsgi/openshift/core/static/sass/_global.sass
@@ -152,7 +152,17 @@ html, body
     font-size: 1.25em
     padding: 30px
     line-height: 150%
-    
+
+.how-it-works
+  align: center
+  h2
+    text-align: center
+  background: #eee
+  margin-top: -30px
+  padding: 20px
+  .works-div
+    text-align: justify
+
 @media (min-width: 767px)
   $huge-radius: 9px
   .btn-huge
