--- a/wsgi/openshift/templates/home/home.html
+++ b/wsgi/openshift/templates/home/home.html
@@ -60,6 +60,9 @@
                     {% endfor %}
                   </ul>
                 </li>
+                <li ng-class="getActiveClass('/how_it_works')">
+                  <a href="#/how_it_works">Jak to funguje?</a>
+                </li>
         </ul>
           ...
             <ul class="nav ng-cloak navbar-nav pull-right">
