hashes for static files called from client

--- a/wsgi/openshift/templates/home/home.html
+++ b/wsgi/openshift/templates/home/home.html
@@ -113,6 +113,7 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
+    <script src="/js/hash.js"></script>
     {% for file in js_files %}
     <script src="{{ file }}"></script>
     {% endfor %}
