homepage meta tags enhanced

--- a/wsgi/openshift/templates/home/home.html
+++ b/wsgi/openshift/templates/home/home.html
@@ -2,7 +2,7 @@
 <html data-ng-app="myApp" data-ng-controller="AppCtrl">
   <head>
     <meta charset="utf-8">
-    <title>{{ title }}Slepé Mapy - interaktivní aplikace na procvičování polohy států</title>
+    <title>{{ title }}Slepé Mapy - adaptivní aplikace na procvičování polohy států</title>
     {% if isProduction  %}
         <script type='text/javascript'>
         window.Muscula = { settings:{
@@ -20,8 +20,8 @@
         </script>
 	{% endif %}
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Adaptivní aplikace na procvičování slepých map<">
+    <meta name="keywords" content="slepé mapy, zeměpis, státy, adaptivní procvičování" />
 
     <!-- Le styles -->
     {% for file in css_files %}
