--- a/wsgi/openshift/core/static/lib/css/flags.css
+++ b/wsgi/openshift/core/static/lib/css/flags.css
@@ -219,7 +219,7 @@
 .flag-sm {background-position: -176px -132px}
 .flag-sn {background-position: -192px -132px}
 .flag-so {background-position: -208px -132px}
-.flag-somaliland {background-position: -224px -132px}
+.flag-xs {background-position: -224px -132px}
 .flag-sr {background-position: -240px -132px}
 .flag-ss {background-position: 0 -143px}
 .flag-st {background-position: -16px -143px}
