--- a/wsgi/openshift/core/static/sass/_global.sass
+++ b/wsgi/openshift/core/static/sass/_global.sass
@@ -84,6 +84,8 @@ ul.dropdown-menu.login
     margin: 0px -15px 0px -15px
     padding: 10px
     padding-left: 30px
+    .btn
+      margin-top: -5px
 
 .label
   margin-right: 10px
@@ -114,6 +116,8 @@ html, body
   margin-top: -30px
   padding-top: 5px
   min-height: 30px
+  .contact
+    margin: 0 5px 0 5px
 
 
 #ng-view
@@ -139,9 +143,12 @@ html, body
   &.view-leave-start
     opacity: 0
 
-.welcome-page
+.welcome-page.jumbotron
   h1
     font-size: 3em
+    position: relative
+    text-align: center
+    left: 0
   p
     font-size: 0.75em
     padding: 30px
