--- a/wsgi/openshift/core/static/sass/_responsive.sass
+++ b/wsgi/openshift/core/static/sass/_responsive.sass
@@ -1,12 +1,5 @@
 @media (max-width: 979px)
   body
-  .map-container
-    margin-top: 0px
-    .map-positioner
-      h1
-        left: 10px
-        bottom: -10px
-        z-index: 20
   .version
     display: none
 
@@ -15,24 +8,19 @@
     padding-top: 0px
   .map-container
     height: auto
-    .map-positioner
-      height: auto
-      width: 100%
-      h1
-        position: relative
-        text-align: left
-        margin-top: -30px
-        margin-bottom: 10px
-        margin-right: 150px
-      #map-holder
-        margin-bottom: 20px
+    h1
+      text-align: left
+      bottom: -3px
+      left: 90px
+      top: auto
   .welcome-page
     p
       padding: 10px
   .navbar
     margin-bottom: 0px
     
-  .welcome-page
+  .welcome-page.jumbotron
+    font-size: 1em
     h1
       font-size: 2em
       margin-top: 0px
@@ -42,6 +30,8 @@
       padding: 5px
     .main-paragraph
       font-size: 1em
+    .flatblock
+      padding: 10px 0px
   .jumbotron 
     padding: 0px
   h2
