--- a/wsgi/openshift/templates/home/home.html
+++ b/wsgi/openshift/templates/home/home.html
@@ -60,6 +60,14 @@
                     {% endfor %}
                   </ul>
                 </li>
+                <li class="dropdown">
+                  <a id="drop-continents" href="#"  class="dropdown-toggle" data-toggle="dropdown">Mapy států <b class="caret"></b></a>
+                  <ul class="dropdown-menu" role="menu" aria-labelledby="drop-continents">
+                    {% for state in states %}
+                    <li><a href="#/view/{{ state.code }}/">{{ state.name }}</a></li>
+                    {% endfor %}
+                  </ul>
+                </li>
                 <li ng-class="getActiveClass('/how_it_works')">
                   <a href="#/how_it_works">Jak to funguje?</a>
                 </li>
@@ -108,7 +116,10 @@
   </div>
 
     <div id="footer">
-        Aplikace Slepé mapy je vyvíjena na <a href="http://www.fi.muni.cz/">FI MU</a>, všechny připomínky velmi vítány. Kontaktní e-mail: slepemapy{zavinac}googlegroups.com
+        Vyvíjeno na <a href="http://www.fi.muni.cz/">FI MU</a>, všechny připomínky velmi vítány:
+        <span class="email contact">slepemapy{zavinac}googlegroups.com</span>
+        <a class="contact" href="https://plus.google.com/u/0/b/104257242679455079956/104257242679455079956/">Google+</a>
+        <a class="contact" href="https://www.facebook.com/slepemapy">Facebook</a>
     </div>
     <!-- Le javascript
     ================================================== -->
