--- a/wsgi/openshift/templates/home/home.html
+++ b/wsgi/openshift/templates/home/home.html
@@ -50,10 +50,10 @@
       <div class="collapse navbar-collapse navbar-responsive-collapse">
         <ul class="nav navbar-nav  pull-left">
                 <li ng-class="getActiveClass('/view/world/')">
-                  <a href="#/view/world/">Mapa světa</a>
+                  <a href="#/view/world/">Svět</a>
                 </li>
                 <li class="dropdown">
-                  <a id="drop-continents" href="#"  class="dropdown-toggle" data-toggle="dropdown">Mapy kontinentů <b class="caret"></b></a>
+                  <a id="drop-continents" href="#"  class="dropdown-toggle" data-toggle="dropdown">Kontinenty <b class="caret"></b></a>
                   <ul class="dropdown-menu" role="menu" aria-labelledby="drop-continents">
                     {% for continent in continents %}
                     <li><a href="#/view/{{ continent.code }}/">{{ continent.name }}</a></li>
@@ -61,7 +61,7 @@
                   </ul>
                 </li>
                 <li class="dropdown">
-                  <a id="drop-continents" href="#"  class="dropdown-toggle" data-toggle="dropdown">Mapy států <b class="caret"></b></a>
+                  <a id="drop-continents" href="#"  class="dropdown-toggle" data-toggle="dropdown">Státy <b class="caret"></b></a>
                   <ul class="dropdown-menu" role="menu" aria-labelledby="drop-continents">
                     {% for state in states %}
                     <li><a href="#/view/{{ state.code }}/">{{ state.name }}</a></li>
